# ucilark

./: LICENSE  README.md  pyproject.toml
tests/: test_ucilark.py
ucilark/: __init__.py  uci.lark  ucilark.py
