[build-system]
requires = ["flit_core >=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "ucilark"
authors = [ {name = "Laurent Ghigonis", email = "ooookiwi@protonmail.com"}, ]
readme = "README.md"
requires-python = ">=3.0"
keywords = ["chess", "uci", "parser", "python"]
license = {text = "BSD-3-Clause"}
dynamic = ["version", "description"]
dependencies = [
    "lark",
]

[project.urls]
"Homepage" = "https://github.com/looran/ucilark"
